--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Ejemplo de Variable
         id: step_1  
-        run: echo "my_variable=Hola Mundo" >> $GITHUB_OUTPUT
+        run: echo "my_variable=Te amo con todo mi corazón" >> $GITHUB_OUTPUT
       
       - name: Obtener mensaje
         run: echo "${{ steps.step_1.outputs.my_variable }}"
