--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,31 +4,18 @@ on: push
 
 jobs:
   first_job:
-    name: Primer
+    name: Primera ejecución
     runs-on: ubuntu-latest
 
-    outputs:
-      salida: ${{ steps.step_1.outputs.my_variable }}
-
     steps:
-      - name: Ejemplo de Variable
+      - name: Generar archivo
         id: step_1  
-        run: echo "my_variable=Te amo con todo mi corazón" >> $GITHUB_OUTPUT
+        run: |
+         echo "Archivo prueba, Hola" >> test.log
+
+      - name: Subir artefacto
+        uses: actions/upload-artifact@v4
+        with:
+          name: archivo-test
+          path: test.log
       
-      - name: Obtener mensaje
-        run: echo "${{ steps.step_1.outputs.my_variable }}"
-        
-      - name: mostrar directorio
-        run: ls -la
-
-  second_job:
-    name: Ejemplo de hola mundo
-    needs: first_job
-    runs-on: ubuntu-latest
-
-    env:
-      SALIDA: ${{ needs.first_job.outputs.salida }}
-
-    steps:
-      - name: Saludo a mi amor
-        run: echo "$SALIDA"
