--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,18 @@ jobs:
         with:
           name: archivo-test
           path: test.log
-      
+    
+  second_job:
+    name: Segunda ejecución
+    runs-on: ubuntu-latest
+    needs: first_job
+
+    steps:
+      - name: Descargar artefacto
+        uses: actions/download-artifact@v4
+        with:
+          name: archivo-test
+
+      - name: Mostrar contenido del archivo
+        run: |
+          cat test.log
